--- a/templates/article/member/view.html
+++ b/templates/article/member/view.html
@@ -61,6 +61,11 @@
                     {% include "misc/member_item.part.html" with avatar=True %}
                 </li>
             {% endfor %}
+            <li>
+                <a href="#add-author" class="open-modal ico-after more blue">
+                    Ajouter un auteur
+                </a>
+            </li>
         </ul>
     </div>
 {% endblock %}
