--- a/templates/tutorial/tutorial/view.html
+++ b/templates/tutorial/tutorial/view.html
@@ -158,6 +158,8 @@
                                     <button type="submit" name="author" value="{{ member.pk }}" class="modal-inner">
                                         Supprimer
                                     </button>
+                                {% else %}
+                                    Vous êtes seul !
                                 {% endif %}
                             </td>
                         </tr>
