ZesteDeSavoir -> Zeste de Savoir + fix mails

--- a/templates/home.html
+++ b/templates/home.html
@@ -14,7 +14,7 @@
 
 {% block meta %}
     {# TODO : Make a better description #}
-    <meta name="description" content="Bienvenue sur ZesteDeSavoir, une communauté">
+    <meta name="description" content="Bienvenue sur Zeste de Savoir, une communauté">
 {% endblock %}
 
 
