--- a/templates/newsletter/failed.html
+++ b/templates/newsletter/failed.html
@@ -1,5 +1,7 @@
 {% extends "newsletter/base.html" %}
 
+
+
 {% block content %}
     <div id="page">
         <div id="page-in">
@@ -9,7 +11,7 @@
             <main role="main">
                 <section>
                     <hgroup>
-                        <h2>Vous êtes déjà inscrit à la newsletter</h2>
+                        <h2>Vous êtes déjà inscrit à la newsletter !</h2>
                     </hgroup>
                 </section>
             </main>
