--- a/templates/email/mp/new.html
+++ b/templates/email/mp/new.html
@@ -1,22 +1,19 @@
 <html lang="fr">
 <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 </head>
 <body>
-<br />
-Bonjour <strong>{{username}}</strong>,
-<br />
-<br />
-<strong>{{author}}</strong> vous a envoyé un message privé sur ZesteDeSavoir.com
-<br />
-<br />
-Pour le lire, <a href="{{url}}">cliquez ici</a>
-<br />
-<br />
-<br />
-Cordialement,
-<br />
-<br />
-L'équipe ZesteDeSavoir
-
+    Bonjour <strong>{{ username }}</strong>,
+    <br />
+    <br />
+    <strong>{{ author }}</strong> vous a envoyé un message privé sur Zeste de Savoir.
+    <br />
+    <br />
+    Pour le lire, <a href="{{ url }}">cliquez ici</a>
+    <br />
+    <br />
+    <br />
+    Cordialement,
+    <br />
+    L'équipe Zeste de Savoir
 </body>
