--- a/templates/pages/contact.html
+++ b/templates/pages/contact.html
@@ -33,7 +33,7 @@
 
     <h3>Le staff</h3>
     <p>
-        Le staff est constitué de certains membres du site dont le but est de contrôler le contenu publié sur ZesteDeSavoir. Ils sont en charge de la modération des messages sur les forums et commentaires, ainsi que de la validation et publication d'articles et/ou de tutoriels de ZesteDeSavoir.
+        Le staff est constitué de certains membres du site dont le but est de contrôler le contenu publié sur Zeste de Savoir. Ils sont en charge de la modération des messages sur les forums et commentaires, ainsi que de la validation et publication d'articles et/ou de tutoriels de Zeste de Savoir.
         Les membres faisant partie du Staff sont les suivants :
     </p>
     <div class="authors">
