Ajoute la class wf-active

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
 
 
 <!DOCTYPE html>
-<html class="no-js enable-mobile-menu">
+<html class="no-js enable-mobile-menu wf-active">
 <head>
     <meta charset="utf-8">
 
