Ajout du lien d'ajout de membre MP

--- a/templates/mp/topic/index.html
+++ b/templates/mp/topic/index.html
@@ -42,6 +42,11 @@
                     {% include 'misc/member_item.part.html' with avatar=True %}
                 </li>
             {% endfor %}
+            <li>
+                <a href="#add-participant" class="open-modal ico-after more blue">
+                    Ajouter un membre
+                </a>
+            </li>
         </ul>
     </div>
 
