--- a/templates/base.html
+++ b/templates/base.html
@@ -373,7 +373,7 @@
                                        class="ico-link dont-click-if-sidebar"
                                        data-click="my-account"
                                     >
-                                        <span class="notif-text ico ico-gear">Mon Compte</span>
+                                        <span class="notif-text ico ico-params">Mon Compte</span>
                                     </a>
                                 {% endif %}
                             </div>
