Maj de la page about - #706

--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -32,12 +32,12 @@
                 Zeste de Savoir est un site donc le code source est sous licence <a href="http://www.gnu.org/licenses/gpl-3.0.html">GPL v3</a>, et provient en partie de <a href="http://progdupeu.pl">Progdupeupl</a>.
             </p>
             <p>
-                {# TODO : Ajouter un lien vers le logo #}
                 <a href="#">Le logo de Zeste de Savoir</a> est créé par MaxRoyo et sous
             	<a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">
                     <img alt="Creative Commons License" src="http://i.creativecommons.org/l/by-nc-sa/4.0/80x15.png">
             	    Licence Creative Commons Attribution - Pas d’Utilisation Commerciale - Partage dans les Mêmes Conditions 4.0 International.
                 </a>
+                <img alt="Logo de Zeste de Savoir" src="http://zestedesavoir.com/static/images/logo.png">
             </p>
         </div>
 
@@ -61,7 +61,7 @@
 
             <h4>Base de données</h4>
             <ul>
-                <li><a href="http://www.postgresql.org/">PostgreSQL</a></li>
+                <li><a href="http://www.mysql.com/">MySQL</a></li>
             </ul>
         </div>
 
