Correction du bug #737

--- a/templates/mp/index.html
+++ b/templates/mp/index.html
@@ -30,7 +30,7 @@
                     <input name="items" type="checkbox" value="{{ topic.pk }}">
                 </div>
                 {% with profile=topic.author|profile %}
-                    <div class="topic-description"
+                    <div class="topic-description">
                         <a href="{{ topic.get_absolute_url }}" class="navigable-link">{% spaceless %}
                             {% if topic.never_read %}<span class="a11y">Non-lu :</span>{% endif %}
                             <span class="topic-title">{{ topic.title }}</span>
