--- a/templates/misc/previsualization.part.html
+++ b/templates/misc/previsualization.part.html
@@ -3,7 +3,9 @@
 
 
 <div class="previsualisation content-wrapper">
-    <h5>Prévisualisation de votre message</h5>
+    <h3 class="reactions-title">Prévisualisation de votre message</h3>
     
-    {{ text|emarkdown }}
+    <div class="message-content">
+    	{{ text|emarkdown }}
+    </div>
 </div>
